objects/Custom_Object_2__c.object
<CustomObject>
    <fields>
        <fullName>field21__c</fullName>
        <label>field21</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>field22__c</fullName>
        <label>field22</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>field23__c</fullName>
        <label>field23</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Custom Object 2</label>
    <nameField>
        <label>Custom Object 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>object2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>